# yanglegeyang

./: .gitignore  LICENSE  README.md
client/: game.js  global.js  oss_manifest.json  project.config.json  project.private.config.json
client/scenes/: auth.js  game.js  loading.js  menu.js  rank.js
client/scenes/game/: cardRender.js  gameLogic.js
client/scenes/game/dialogs/: confirm.js  index.js  propShare.js  revive.js  win.js
client/scenes/game/levels/: level2.js
client/scenes/game/props/: index.js  moveOut.js  peek.js  shuffle.js  undo.js
client/scenes/game/renders/: backButton.js  background.js  cards.js  endFx.js  flyAnim.js  index.js  matchFx.js  particles.js  props.js  slots.js  themes.js  timer.js  title.js  (+1 more)
client/utils/: assets.js  audio.js  request.js
docs/前端/: API清单.md  关卡设计指南.md  总览.md  游戏界面比例调整.md
docs/后端/: 总览.md  服务器部署方案.md  本地部署.md
docs/数据库/: 总览.md
docs/需求/: 图片资源需求.md  音频资源需求.md
scripts/: find_mysql_pwd.py  fix_nginx.py  init_mysql.py  init_mysql_remote.py  server_check.sh
scripts/oss_upload/: create_bucket.py  fix_bucket_acl.py  pyproject.toml  upload.py  upload_audio.py
server/: .env.example  config.py  docker-compose.yml  main.py  pyproject.toml
server/app/api/: auth.py  record.py
server/app/core/: database.py  redis.py
server/app/middleware/: auth_middleware.py
server/app/models/: record.py  user.py
server/app/schemas/: auth.py  record.py
server/app/services/: auth_service.py  record_service.py
server/app/utils/: response.py  wechat.py
server/sql/: schema.sql
server/tests/: test_auth.py  test_record.py
